[gd_scene load_steps=9 format=3 uid="uid://dbhig3m5rb3ha"]

[ext_resource type="Texture2D" uid="uid://8urthghqd7qa" path="res://assets/enemy_1.png" id="1_alcdm"]
[ext_resource type="Script" path="res://src/agents/enemy_1.gd" id="1_l554w"]
[ext_resource type="PackedScene" uid="uid://bfvynflu5m65w" path="res://src/projeciles/bullet.tscn" id="2_cv0uf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x5r6i"]
radius = 27.0185

[sub_resource type="Animation" id="Animation_706ql"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_11ivr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_so7yi"]
_data = {
"RESET": SubResource("Animation_11ivr"),
"die": SubResource("Animation_706ql")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c0ptx"]
radius = 35.0

[node name="RigidBody2D" type="RigidBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 13
freeze = true
script = ExtResource("1_l554w")
projectile_scene = ExtResource("2_cv0uf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_alcdm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_x5r6i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_so7yi")
}

[node name="DamageDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_c0ptx")

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="DamageDetector" to="." method="_on_damage_detector_area_entered"]
